# test

./: .gitignore  CLAUDE.md  README.md  START_POSTGRES.md  docker-compose.yml  package-lock.json
octolab_mvp/backend/: .env.example  pyproject.toml
octolab_mvp/backend/alembic/versions/: 7e9c3bfe2f34_add_evidence_retention_fields.py  8f5b8c4d9e5f_add_port_reservation_table.py  f6g7h8i9j0k1_add_lab_runtime_column.py  (+1 more)
octolab_mvp/backend/app/: config.py  main.py
octolab_mvp/backend/falco/: entrypoint.sh
octolab_mvp/backend/scripts/: run_with_env.py
octolab_mvp/backend/tests/: test_admin_cleanup_networks.py  test_admin_rbac.py  test_admin_runtime_drift.py  test_admin_stop_verify.py  test_auth_register.py  test_compose_runtime_cleanup.py  test_compose_runtime_deterministic.py  test_compose_runtime_network_cleanup.py  test_compose_runtime_vnc_password_env.py  test_db_schema_guard.py  test_dev_guac_diagnoser.py  test_dockerfile_validator.py  test_env_loader.py  test_evidence_authorization.py  test_evidence_status.py  test_firecracker_doctor.py  test_firecracker_startup_failhard.py  test_guac_compose_invariants.py  test_guacamole.py  test_health_firecracker.py  test_lab_cleanup.py  test_lab_serialization.py  test_microvm_doctor.py  test_microvm_paths.py  test_microvm_smoke.py  test_microvm_wsl_jailer_policy.py  test_network_cleanup_leaks.py  test_no_runtime_fallback.py  test_novnc_readiness_gate.py  test_passwordless_vnc_guard.py  test_runtime_enforcement.py  test_safe_extract.py  test_teardown_timeout.py  test_teardown_truth.py  test_teardown_worker.py
(+710 files in other folders)
